--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   statusbarz: ^1.0.2
   flutter_svg: ^1.0.3
+  table_calendar: ^3.0.5
 
 dev_dependencies:
   flutter_test:
