--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/svg/plan_logo.svg"
+
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
