--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  get: ^4.6.5
+  dio: ^4.0.6
   statusbarz: ^1.0.2
   flutter_svg: ^1.0.3
 
