--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,18 @@ dependencies:
   statusbarz: ^1.0.2
   flutter_svg: ^1.0.3
   intl: ^0.17.0
+  nigerian_states_and_lga: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "0.9.2"
+flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/svg/plan_logo.svg"
+  image_path: "assets/images/s4c_icon.png"
 
 # The following section is specific to Flutter.
 flutter:
