--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   dio: ^4.0.6
   statusbarz: ^1.0.2
   flutter_svg: ^1.0.3
+  flutter_secure_storage: ^5.0.2
+
   intl: ^0.17.0
   nigerian_states_and_lga: ^1.0.0
 
